updated user data
