# routes/offer.routes.js
@@ -5,14 +5,14 @@ const {
   updateOffer,
   getSingleOffer,
   createOffer,
-  getEventsOffer,
+  getEventOffers,
 } = require("../controllers/offer.controllers.js");
 
 const offerRoutes = express.Router();
 
 offerRoutes.get("/offers", getAllOffers);
 offerRoutes.get("/offers/:id", getSingleOffer);
-offerRoutes.get("/offers/events/:id", getEventsOffer);
+offerRoutes.get("/offers/events/:eventId", getEventOffers);
 offerRoutes.post("/offers", createOffer);
 offerRoutes.patch("/offers/:id", updateOffer);
 offerRoutes.delete("/offers/:id", deleteOffer);
